# web_viatges

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
DjangoProject/: settings.py  urls.py
accounts/: admin.py  api.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/management/commands/: generate_destinacions.py
accounts/migrations/: 0001_initial.py  0002_alter_viatge_descripcio.py  0003_viatge_continent_viatge_pais.py  0004_alter_viatge_continent_alter_viatge_pais.py  0005_destinacio_remove_viatge_continent_and_more.py  0006_viatge_num_persones.py  0007_perfilusuari.py  0008_alter_perfilusuari_usuari.py
accounts/templates/: base.html  editar_perfil.html  editar_viatge.html  home.html  login.html  mapa.html  navbar.html  opcions_viatge.html  perfil.html  register.html  reserva_exitosa.html  reserva_form.html  staff.html  viatges_programats.html
accounts/templates/flights/: results.html  search_form.html
accounts/tests/: test_viatges_e2e.py
static/css/: style.css  styles.css
