[tool.poetry]
name = "web-viatges"
version = "0.1.0"
description = ""
authors = ["Miquel Baron <miquelbaron111@gmail.com>"]
readme = "README.md"
packages = [{ include = "web_viatges" }]  # Asegúrate de que el nombre coincide con la carpeta donde está manage.py

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.1.7,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
