[tool.poetry]
name = "web-viatges"
version = "0.1.0"
description = ""
authors = ["Miquel Baron <miquelbaron111@gmail.com>"]
readme = "README.md"
# Ajustado el nombre de la carpeta al nombre correcto donde está el código de Django
packages = [{ include = "DjangoProject" }]  # Cambié "web_viatges" por "DjangoProject"

[tool.poetry.dependencies]
python = ">=3.11"
django = "5.1.8"
pillow = "^11.1.0"
requests = "2.32.3" #inutilitzada de moment
python-dotenv = "^1.1.0" #api key
amadeus = "^12.0.0" #api
icecream = "^2.1.4" #per fer logs
django-widget-tweaks = "^1.5.0"
faker = "^37.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
